--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ aiohttp==3.9.1
 
 # Database dependencies
 psycopg2-binary==2.9.9
+supabase==2.3.4
+retrying==1.3.4
 
 # Environment and configuration
 python-dotenv==1.0.0
@@ -23,3 +25,7 @@ asyncio-throttle==1.0.2
 # Additional utilities
 urllib3==2.1.0
 certifi==2023.11.17
+
+# Testing dependencies
+pytest==7.4.3
+pytest-mock==3.12.0
