--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ beautifulsoup4==4.12.2
 lxml==4.9.3
 requests==2.31.0
 aiohttp==3.9.1
+playwright==1.40.0
 
 # Database dependencies
 psycopg2-binary==2.9.9
