--- a/.github/workflows/daily-scraper.yml
+++ b/.github/workflows/daily-scraper.yml
@@ -30,10 +30,17 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install --upgrade setuptools wheel
         pip install -r requirements.txt
         
     - name: Install Playwright browsers
       run: playwright install chromium
+        
+    - name: Test Supabase client compatibility
+      run: python test_supabase_client.py
+      env:
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
         
     - name: Run scraper with cleaning
       run: python run.py --run-with-cleaning
