--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ playwright==1.40.0
 
 # Database dependencies
 psycopg2-binary==2.9.9
-supabase==2.3.4
+supabase>=2.8.0,<3.0.0
 retrying==1.3.4
 
 # Environment and configuration
