Infortic Scraper V2 Beasiswa Scraper Working

--- a/.env
+++ b/.env
@@ -26,3 +26,8 @@ LOG_BACKUP_COUNT=5
 # Optional: Rate limiting
 RATE_LIMIT_DELAY=1  # seconds between requests
 MAX_RETRIES=3
+
+
+# Luar Kampus Account
+LUAR_KAMPUS_GMAIL=grey7code@gmail.com
+LUAR_KAMPUS_PASSWORD=LuarKampusBeasiswa.123
