--- a/.github/workflows/scheduled_scraper.yml
+++ b/.github/workflows/scheduled_scraper.yml
@@ -9,9 +9,13 @@ on:
 jobs:
   clean_database:
     runs-on: ubuntu-latest
+    
+    if: github.ref == 'refs/heads/beasiswa_scraper'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: beasiswa_scraper
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -51,6 +55,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: beasiswa_scraper
 
       - name: Set up Python
         uses: actions/setup-python@v4
